--- a/modules/examples/src/todo/todo.html
+++ b/modules/examples/src/todo/todo.html
@@ -18,7 +18,7 @@
 
     <ul id="todo-list">
 
-      <li *for="#todo of todoStore.list">
+      <li *for="#todo of todoStore.list" class="record">
 
         <div class="view"
             [class.hidden]="todoEdit == todo">
