--- a/tools/broccoli/html-replace/SCRIPTS_benchmarks.html
+++ b/tools/broccoli/html-replace/SCRIPTS_benchmarks.html
@@ -1,9 +1,9 @@
-<script src="es6-shim.js" type="text/javascript"></script>
-<script src="zone-microtask.js" type="text/javascript"></script>
-<script src="long-stack-trace-zone.js" type="text/javascript"></script>
-<script src="url_params_to_form.js" type="text/javascript"></script>
-<script src="system.src.js" type="text/javascript"></script>
-<script src="Reflect.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@es6-shim.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@zone-microtask.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@long-stack-trace-zone.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@url_params_to_form.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@system.src.js" type="text/javascript"></script>
+<script src="@@BASE_DIR@@Reflect.js" type="text/javascript"></script>
 <script type="text/javascript">
   var filename = '@@FILENAME_NO_EXT';
   System.config({
